# hplatetectonics

./: .gitignore  README.md  hplatetectonics.cabal
src/: Basic.hs  Geometry.hs  Graphics.hs  Lithosphere.hs  Main.hs  Plate.hs  PlatesGeneration.hs
test/: MainTest.hs  PlateTest.hs  PlatesGenerationTest.hs
