name:                hplatetectonics
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Federico Tomassetti
maintainer:          f.tomassetti@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable hplatetectonics
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7,
                       haskell-diamond-square>=0.1,
                       random,
                       containers,
                       JuicyPixels == 3.1.*,
                       repa,
                       repa-io
  hs-source-dirs:      src
  default-language:    Haskell2010